<resources>
    <string name="app_name">NeWork</string>
    <string name="description_button_plus_post">PlusPost</string>
    <string name="description_button_plus_event">PlusEvent</string>
    <string name="author_name">Author Name</string>
    <string name="published">16.11.24 18:36</string>
    <string name="description_post_menu">Menu</string>
    <string name="content">Content_text</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_shares">Shares</string>
    <string name="typeEvent">Online</string>
    <string name="datetimeOfEvent">31.12.24</string>
    <string name="link">https://...</string>
    <string name="description_event_participants">Event_Participants</string>
    <string name="login">Login</string>
    <string name="position">Position</string>
    <string name="basket">Basket</string>
    <string name="jobName">Job_Name</string>
    <string name="dateStart">09 января 2023</string>
    <string name="middle"> - </string>
    <string name="dateFinish">НВ</string>
    <string name="new_post_text">New post text</string>
    <string name="new_event_text">New event text</string>
    <string name="day_Of_Event_button">day Of Event Button</string>
    <string name="add_photo_button">Add Photo Button</string>
    <string name="add_attachment_button">Add Attachment Button</string>
    <string name="mention_users_button">Mention Users Button</string>
    <string name="follow_map_button">Follow Map Button</string>
    <string name="remove">Remove</string>
    <string name="new_event_image">New Event Image</string>
    <string name="new_post_image">New Post Image</string>
    <string name="photo">Photo</string>
    <string name="attachment">Attachment</string>
    <string name="mentioned">Mentioned</string>
    <string name="follow_map">Follow Map</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="new_post_title">New post</string>
    <string name="new_event_title">New event</string>
    <string name="create_post_button">Create Post Button</string>
    <string name="create_event_button">Create Event Button</string>
    <string name="back_button">Back Button</string>
    <string name="account_button">Account Button</string>
    <string name="login_title">Login</string>
    <string name="login_hint">Login</string>
    <string name="registration_title">Registration</string>
    <string name="password_hint">Password</string>
    <string name="an_account">Don\'t have an account? Register</string>
    <string name="name_hint">Name</string>
    <string name="helper_text_login">Login can not by empty</string>
    <string name="helper_text_name">Name can not by empty</string>
    <string name="helper_text_password">Password can not by empty</string>
    <string name="add_avatar">Add avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_post_title">Post</string>
    <string name="detail_event_title">Event</string>
    <string name="share_post_button">Share Post Button</string>
    <string name="share_event_button">Share Event Button</string>
    <string name="author_job">Android Developer</string>
    <string name="post_image">Post Image</string>
    <string name="event_image">Event Image</string>
    <string name="author_avatar">Author Avatar</string>
    <string name="post_text">Post text</string>
    <string name="event_text">Event text</string>
    <string name="likers">Likers</string>

</resources>