<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity"
    android:padding="20dp">


    <TextView
        android:id="@+id/jobName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jobName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dates"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/basket"
        />

    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobName"
        app:layout_constraintBottom_toBottomOf="@id/main_barrier"
        app:layout_constraintEnd_toStartOf="@id/basket"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/dateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread"

        />

    <TextView
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle"
        app:layout_constraintVertical_chainStyle="spread"

        />

    <TextView
        android:id="@+id/dateFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFinish"
        app:layout_constraintVertical_chainStyle="spread"

        />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/basket"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/basket_30"
        android:contentDescription="@string/basket"
        android:background="@android:color/transparent"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/main_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="basket, dates"
        />


    <TextView
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/main_barrier"
        app:layout_constraintBottom_toTopOf="@+id/link"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/link"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/position"
        tools:layout_editor_absoluteX="20dp"
        android:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>